<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/historyHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/orangeMain">

        <LinearLayout
            android:id="@+id/buttonHFContainer"
            android:layout_width="200dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp">

            <Button
                style="@style/SpinnerAsEditText"
                android:id="@+id/buttonHistoryList"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:text="@string/text_button_history_list"/>

            <Button
                style="@style/SpinnerAsEditText"
                android:id="@+id/buttonFavoriteList"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:text="@string/text_button_favorite_list"/>

        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:color="#000000"
            android:layout_alignLeft="@id/buttonHFContainer"
            android:layout_alignStart="@id/buttonHFContainer"
            android:layout_alignParentBottom="true"/>

        <ImageButton
            android:id="@+id/buttonClear"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/content_button_clearHistory"
            android:src="@mipmap/clear_history"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragmentsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>